#88 - fix popup layers z-index

--- a/protected/modules/media/assets/plugins/fancybox/jquery.fancybox.css
+++ b/protected/modules/media/assets/plugins/fancybox/jquery.fancybox.css
@@ -21,7 +21,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: 8020;
+	z-index: 1020;
 }
 
 .fancybox-skin {
@@ -35,7 +35,7 @@
 }
 
 .fancybox-opened {
-	z-index: 8030;
+	z-index: 1030;
 }
 
 .fancybox-opened .fancybox-skin {
@@ -88,7 +88,7 @@
 	background-position: 0 -108px;
 	opacity: 0.8;
 	cursor: pointer;
-	z-index: 8060;
+	z-index: 1060;
 }
 
 #fancybox-loading div {
@@ -104,7 +104,7 @@
 	width: 36px;
 	height: 36px;
 	cursor: pointer;
-	z-index: 8040;
+	z-index: 1040;
 }
 
 .fancybox-nav {
@@ -116,7 +116,7 @@
 	text-decoration: none;
 	background: transparent url('blank.gif'); /* helps IE */
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
-	z-index: 8040;
+	z-index: 1040;
 }
 
 .fancybox-prev {
@@ -134,7 +134,7 @@
 	height: 34px;
 	margin-top: -18px;
 	cursor: pointer;
-	z-index: 8040;
+	z-index: 1040;
 	visibility: hidden;
 }
 
@@ -171,7 +171,7 @@
 	left: 0;
 	overflow: hidden;
 	display: none;
-	z-index: 8010;
+	z-index: 1010;
 	background: url('fancybox_overlay.png');
 }
 
@@ -193,7 +193,7 @@
 	font: normal 13px/20px "Helvetica Neue",Helvetica,Arial,sans-serif;
 	position: relative;
 	text-shadow: none;
-	z-index: 8050;
+	z-index: 1050;
 }
 
 .fancybox-opened .fancybox-title {
@@ -205,7 +205,7 @@
 	bottom: 0;
 	right: 50%;
 	margin-bottom: -35px;
-	z-index: 8050;
+	z-index: 1050;
 	text-align: center;
 }
 
